Fix business index item jumping-on-hover bug

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -63,7 +63,7 @@
 
   .business-index-item:hover {
     background: #d3d3d3;
-    transition: background 150ms linear;
+    transition: 150ms;
     cursor: pointer;
   }
 }
